Prevent cards and images from being selected
because I find it happens easily by accident, it looks bad when it happens, and it can be a bit tricky to find somewhere to click to get rid of the selection again.

--- a/css/spni.css
+++ b/css/spni.css
@@ -1919,3 +1919,13 @@ body.modal-open {
 .float-right {
 	float: right;
 }
+
+.player-card-area, .player-card-area input, .opponent-card-area, .player-clothing-container, .image-row {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
